nginx/my-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 2
  template:
    metadata:
      labels:
        k8s: tomcat
    spec:
      containers:
      - name: tomcat
        image: 172.20.0.119/k8s/nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    k8s: tomcat
